<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/main_editText_parcel1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/main_edit_text_parcela1"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/main_editText_parcel2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/main_editText_parcel2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/main_edit_text_parcela2"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/main_button_add"
        app:layout_constraintEnd_toEndOf="@+id/main_editText_parcel1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/main_editText_parcel1"
        app:layout_constraintTop_toBottomOf="@+id/main_editText_parcel1" />

    <Button
        android:id="@+id/main_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/main_button_add"
        android:onClick="add"
        app:layout_constraintBottom_toTopOf="@+id/main_button_sub"
        app:layout_constraintEnd_toStartOf="@+id/main_button_sub"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_editText_parcel2" />

    <Button
        android:id="@+id/main_button_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_sub"
        app:layout_constraintBottom_toBottomOf="@+id/main_button_add"
        app:layout_constraintEnd_toStartOf="@+id/main_button_mult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_button_add"
        app:layout_constraintTop_toTopOf="@+id/main_button_add" />

    <Button
        android:id="@+id/main_button_mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="mul"
        android:text="@string/main_button_mul"
        app:layout_constraintBottom_toBottomOf="@+id/main_button_sub"
        app:layout_constraintEnd_toStartOf="@+id/main_button_div"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_button_sub"
        app:layout_constraintTop_toTopOf="@+id/main_button_sub" />

    <Button
        android:id="@+id/main_button_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/main_button_div"
        app:layout_constraintBottom_toBottomOf="@+id/main_button_mult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_button_mult"
        app:layout_constraintTop_toTopOf="@+id/main_button_mult" />

    <TextView
        android:id="@+id/main_textView_result"
        android:gravity="center"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:text="@string/main_textView_result"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_button_div"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/main_button_add"
        app:layout_constraintTop_toBottomOf="@+id/main_button_div" />
</androidx.constraintlayout.widget.ConstraintLayout>